--- a/sobre/assets/style/sobre.css
+++ b/sobre/assets/style/sobre.css
@@ -2,12 +2,7 @@
 
 @font-face {
     font-family: 'Analogue';
-    src: url(/home/assets/fonts/Analogue35Thin.ttf) format('truetype');
-}
-
-@font-face {
-    font-family: 'Cream Peach';
-    src: url(/home/assets/fonts/CreamPeach.ttf) format('truetype');
+    src: url(/sobre/assets/fonts/Analogue35Thin.ttf) format('truetype');
 }
 
 :root {
@@ -49,11 +44,56 @@ body {
     color: #e79e74;
 }
 
+div {
+    width: 100vw;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-top: 18vh;
+}
+
 .container-2 {
     display: flex;
     flex-direction: row;
-    height: 90vh;
+    height: 50vh;
     width: 100vw;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
+    background-color: var(--cor0);
+}
+
+.bloco-1{
+    max-width: 400px;
+    width: 33vw;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.titulo {
+    letter-spacing: 0.2em;
+    font-family: Analogue;
+    padding: 10px;
+    font-size: 1.5em;
+    font-weight: lighter;
+    color: #7e8a9c;
+}
+
+.conteudo {
+    color: #F5F5F7;
+    text-align: justify;
+    letter-spacing: 0.1em;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.329);
+}
+
+.bloco-2{
+    width: 20vw;
+    height: 40vh;
+}
+
+.bloco-3{
+    max-width: 400px;
+    width: 33vw;
+    padding: 10px;
+    border-radius: 10px;
 }
