--- a/home/assets/style/home.css
+++ b/home/assets/style/home.css
@@ -12,108 +12,109 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
 }
 
 body {
-    font-family: Helvetica;
+    font-size: 100%;
+    font-family: Helvetica, sans-serif;
     background: #F5F5F7;
 }
 
-.container-1 {
+/*Header*/
+
+.cabecalho {
     display: flex;
     flex-direction: row;
-    height: 10vh;
-    width: 100vw;
     align-items: center;
     justify-content: space-around;
     box-shadow: 2px 2px 4px #b48b7459;
 }
 
-.link {
-    text-decoration: none;
+.cabecalho-imagem {
+    height: 100px;
+}
+
+.cabecalho-navegacao {
+    display: flex;
+    gap: 32px;
+}
+
+.cabecalho-item {
     color: #b48b74;
     font-family: 'Times New Roman', Times, serif;
-    font-weight: bold;
-    font-size: 1em;
-    letter-spacing: 0.1em;
-    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.199);
+    font-weight: 800;
+    font-size: 16px;
     transition: 0.5s;
 }
 
-.link:hover {
+.cabecalho-item:hover {
     color: #e79e74;
 }
 
-.container-2 {
+.conteudo {
+  margin-top: 100px;
+  padding: 15px;
+}
+
+.conteudo-principal {
     display: flex;
     flex-direction: row;
-    height: 90vh;
-    width: 100vw;
-    justify-content: space-around;
     align-items: center;
+    justify-content: space-around;
+    padding: 15px;
 }
 
-.bloco-1 {
-    text-align: justify;
-    width: 40vw;
-    border-radius: 15px;
+.conteudo-principal-escrito {
+    width: 1030px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 10px;
 }
 
-.artigo {
-    margin: 50px 0px;
-}
-
-.titulo {
-    letter-spacing: 0.2em;
-    font-family: Analogue;
+.conteudo-principal-titulo {
     text-align: center;
     margin: -100px 0px 100px 0px;
-    padding: 10px;
-    font-size: 1.5em;
-    font-weight: lighter;
     color: #7e8a9c;
+    font-family: Analogue;
+    font-weight: lighter;
+    font-size: 24px;
+    letter-spacing: 2px;
 }
 
-.subtitulo {
+.conteudo-principal-subtitulo {
     background-color: var(--cor0);
-    font-weight: lighter;
     padding: 10px;
-    margin: 50px 0px 10px 0px;
     color: #F5F5F7;
-    text-align: center;
-}
-.conteudo {
-    margin: 0px 0px 50px 0px;
-    padding: 10px;
-    font-weight: lighter;
-    color: #525a66;
 }
 
-.botao {
-    margin-left: 20px;
-    padding: 13px 30px;
-    background-color: #c9835e;
-    color: #F5F5F7;
-    font-weight: bold;
-    font-size: 1em;
-    text-decoration: none;
-    text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.541);
-    border: 1px solid #b48b74;
-    box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.37);
-    border-radius: 30px;
-    transition: 0.5s;
-}
-
-.botao:hover {
-    background-color: #e79e74;
-}
-
-.bloco-2 {
-    width: 30vw;
-}
-
-#imagem-home {
-    padding: 10px;
+.conteudo-principal-imagem {
     width: 100%;
+    max-width: 600px;
+    min-width: 300px;
     border-radius: 50%;
+}
+
+.conteudo-principal-paragrafo {
+    font-size: 14px;
+    color: #6b7179;
+}
+
+.conteudo-principal-botao {
+    background-color: #a57446;
+    color: #F5F5F7;
+    border: none;
+    width: 160px;
+    height: 50px;
+    border-radius: 50px;
+    transition: 0.5s;
+    margin-top: 30px;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.conteudo-principal-botao:hover {
+    background-color: #d3a286;
 }
