--- a/home/assets/style/home.css
+++ b/home/assets/style/home.css
@@ -113,6 +113,7 @@ body {
     margin-top: 30px;
     font-size: 16px;
     font-weight: bold;
+    cursor: pointer;
 }
 
 .conteudo-principal-botao:hover {
