--- a/paginas/home/assets/style/home.css
+++ b/paginas/home/assets/style/home.css
@@ -104,16 +104,20 @@ body {
 
 .conteudo-principal-botao {
     background-color: #a57446;
-    color: #F5F5F7;
     border: none;
     width: 160px;
     height: 50px;
     border-radius: 50px;
     transition: 0.5s;
     margin-top: 30px;
+    cursor: pointer;
+}
+
+.conteudo-principal-texto-botao {
+    background-color: #a57446;
+    color: #F5F5F7;
     font-size: 16px;
     font-weight: bold;
-    cursor: pointer;
 }
 
 .conteudo-principal-botao:hover {
