--- a/paginas/produtos/assets/style/produtos.css
+++ b/paginas/produtos/assets/style/produtos.css
@@ -17,6 +17,7 @@
 * {
     margin: 0;
     padding: 0;
+    text-decoration: none;
 }
 
 body {
@@ -106,4 +107,34 @@ body {
     justify-content: space-around;
     border-radius: 20px;
     transition: all 0.3s ease-out;
+}
+
+
+.cabecalho {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    box-shadow: 2px 2px 4px #b48b7459;
+}
+
+.cabecalho-imagem {
+    height: 100px;
+}
+
+.cabecalho-navegacao {
+    display: flex;
+    gap: 32px;
+}
+
+.cabecalho-item {
+    color: #b48b74;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: 800;
+    font-size: 16px;
+    transition: 0.5s;
+}
+
+.cabecalho-item:hover {
+    color: #e79e74;
 }
