--- a/paginas/home/assets/style/home.css
+++ b/paginas/home/assets/style/home.css
@@ -111,13 +111,14 @@ body {
     transition: 0.5s;
     margin-top: 30px;
     cursor: pointer;
+    
 }
 
 .conteudo-principal-texto-botao {
-    background-color: #a57446;
     color: #F5F5F7;
     font-size: 16px;
     font-weight: bold;
+    padding: 16px 38px;
 }
 
 .conteudo-principal-botao:hover {
