Atualizei os diretórios

--- a/paginas/home/assets/style/home.css
+++ b/paginas/home/assets/style/home.css
@@ -2,7 +2,7 @@
 
 @font-face {
     font-family: 'Analogue';
-    src: url(/home/assets/fonts/Analogue35Thin.ttf) format('truetype');
+    src: url(./home/assets/fonts/Analogue35Thin.ttf) format('truetype');
 }
 
 :root {
